# rocon_robots

./: .gitignore  README.md  rocon_nao_ros_indigo.rosinstall
rocon_nao/: CMakeLists.txt  package.xml
rocon_nao/env-hooks/: 25.nao.sh.em
rocon_nao/interactions/: pairing.interactions
rocon_nao/launch/: concert_client.launch  standalone.launch
rocon_nao/launch/includes/: .app_manager.launch.xml.swp  app_manager.launch.xml  concert_client.launch.xml  nao.launch.xml  nao_apps.launch.xml
rocon_nao/rapps/text_to_speech/: text_to_speech.launch  text_to_speech.rapp
rocon_nao/rapps/video_teleop/: video_teleop.launch  video_teleop.rapp
