<?xml version="1.0"?>
<package>
  <name>rocon_nao</name>
  <version>0.0.0</version>
  <description>
    Roconised Nao
  </description>

  <maintainer email="jihoonlee.in@gmail.com">Jihoon Lee</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/rocon_nao</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nao_bringup</build_depend>
  <build_depend>rocon_app_manager</build_depend>
  <build_depend>rocon_apps</build_depend>
  <run_depend>nao_bringup</run_depend>
  <run_depend>rocon_app_manager</run_depend>
  <run_depend>rocon_apps</run_depend>

  <!-- image converter dependency -->
  <run_depend>python-numpy</run_depend>
  <run_depend>cv2</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>
    <rocon_app>rapps/video_teleop/video_teleop.rapp</rocon_app>
    <rocon_app>rapps/text_to_speech/text_to_speech.rapp</rocon_app>
  </export>
</package>
